working on content is boring
Changed the font to Lato, how exciting.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -33,7 +33,7 @@ $green:     #859900;
 /* COLOR PALLETTE */
 $almost-black: #111111;
 
-$font-stack:   Helvetica, sans-serif;
+$font-stack:   Lato, Helvetica, sans-serif;
 $text-color:   #333;
 $slide_width:  100%;
 $slide_height: 100%;
