--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -15,11 +15,12 @@
 
 /* COLOR PALLETTE */
 $almost-black: #111111;
+$grey: #0c0c0c;
 
 $font-stack:   Lato, Helvetica, sans-serif;
 $text-color:   #333;
-$slide_width:  100%;
-$slide_height: 100%;
+$slide_width:  90%;
+$slide_height: 90%;
 
 body {
   font-family: $font-stack;
@@ -44,21 +45,18 @@ p {
   height: $slide_height;
   position: relative;
   @include perspective(600px);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  background: $grey;
 }
 
 .bespoke-slide {
   text-align: center;
   position: absolute;
-  width: $slide_width*0.8;
-  height: $slide_height*0.8;
   @include transform-style(preserve-3d);
   @include backface-visibility(hidden);
   @include transition-duration(1.0s);
   background-color: $almost-black;
+  @include fill-parent;
+  @include outer-container;
 }
 
 .bespoke-active {
