--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,18 +14,17 @@
 @import "neat/neat";
 
 /* CSS RESET */
-// @import "reset.css";
+@import "reset.css";
 
 /* COLOR PALLETTE */
-$almost-black : #111;
-$grey         : #BBB;
-$white        : #FFF;
+/* https://kuler.adobe.com/Imagine-color-theme-3389921/ */
+$black  : #282828;
+$medium : #3C3C3C;
+$grey   : #505050;
+$teal   : #3EB596;
+$white  : #E0E0E0;
 
-/* FLAT UI COLORS */
-$pomegranate : #c0392b;
-
-
-$font-stack:   Lato, Helvetica, sans-serif;
+$font-stack : Lato, Helvetica, sans-serif;
 
 /* SLIDE VARIABLES */
 $slide_width     : 90%;
@@ -38,7 +37,7 @@ $change_time     : 0.7s;
 
 html body {
   font-family: $font-stack;
-  color: $almost-black;
+  color: $black;
   overflow: hidden;
   position: relative;
   height: 100%;
@@ -46,16 +45,22 @@ html body {
   margin: 0;
   padding: 0;
 
-  font-size: 62.5% // makes default font size 10px, for easy math
+  background: $white;
+
+  font-size: 62.5%; // makes default font size 10px, for easy math
 }
 
 p {
   text-align: justify;
+  font-size: 1.2rem;
+  margin : 2%;
+  overflow: auto;
 }
 
 h1 {
   font-size: 3.6rem;
   font-weight: bold;
+  margin : 2%;
 }
 
 h2 {
@@ -66,40 +71,48 @@ h3 {
   font-size: 1.6rem;
 }
 
-.mono {
-  font-family: "Courier New", monospace;
+em {
+  font-style: italic;
 }
+
+img {
+  max-width  : 100%;
+  max-height : 100%;
+}
+
+a:link    { color: $teal; }  /* unvisited link  */
+a:visited { color: darken($teal, 20%); }  /* visited link    */
 
 blockquote {
   display:block;
-  background: lighten($grey, 10%);
+  background: $medium;
+  color: $white;
   padding: 15px 20px 15px 45px;
-  margin: 0 0 20px;
+  margin: 2%;
   position: relative;
   
   /*Font*/
   font-family: Georgia, serif;
   font-size: 3.2rem;
-  text-align: justify;
+  text-align: left;
   
   /*Borders - (Optional)*/
-  border-left: 15px solid $pomegranate;
-  border-right: 2px solid $pomegranate;
+  border-left: 15px solid $teal;
+  border-right: 2px solid $teal;
 }
 
 blockquote::before{
   content: "\201C"; /*Unicode for Left Double Quote*/
   
   /*Font*/
-  font-family: Georgia, serif;
-  font-size: 60px;
-  font-weight: bold;
-  color: #999;
+  font-family: "Playfair Display", serif;
+  font-size: 6.5rem;
+  color: $teal;
   
   /*Positioning*/
   position: absolute;
-  left: 10px;
-  top:5px;
+  left: 0.1rem;
+  top: -2.0rem;
 }
 
 blockquote::after{
@@ -107,22 +120,35 @@ blockquote::after{
   content: "";
 }
 
-blockquote a{
-  text-decoration: none;
-  background: #eee;
-  cursor: pointer;
-  padding: 0 3px;
-  color: #c76c0c;
-}
-
-blockquote a:hover{
- color: #666;
-}
-
 blockquote em{
   font-style: italic;
 }
 
+li {
+  font-size: 1.6rem;
+  line-height: 2.0rem;
+}
+
+li li {
+  font-size: 1.2rem;
+}
+
+/* SPECIAL CLASSES */
+.center {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 1%;
+  width: 100%;
+  text-align: center;
+}
+
+.mono {
+  font-family: "Courier New", monospace;
+}
 
 /* NAV BUTTONS */
 .nav {
@@ -136,18 +162,13 @@ blockquote em{
   line-height: 100%;
   font-size: 80px;
   z-index: 1;
-  background-color: $grey;
+  background-color: $white;
   display: table;
   overflow: hidden;
 }
 
 .nav:hover {
-  background-color: darken($grey, 20%);
-}
-
-.center {
-  display: table-cell;
-  vertical-align: middle;
+  background-color: darken($white, 20%);
 }
 
 #forward {
@@ -158,12 +179,29 @@ blockquote em{
   left: 0;
 }
 
+/* GRID CSS */
+// default grid is 12
+.grid {
+  @include outer-container;
+  max-width: 90%;
+  .half {
+    @include span-columns(6);
+  }
+  .third {
+    @include span-columns(4);
+  }
+  .two-thirds {
+    @include span-columns(8);
+  }
+}
+
+
 /* BESPOKE CLASSES */
 .bespoke-parent {
   position: fixed;
   height: 100%;
   width: 100%;
-  background: $grey;
+  background: $white;
   overflow: hidden;
 }
 
@@ -204,13 +242,14 @@ blockquote em{
 /* BESPOKE BULLETS */
 
 .bespoke-bullet-active {
-  visibility: visible;
+  opacity: 1.0;
 }
 
 .bespoke-bullet-inactive {
-  visibility: hidden;
+  opacity: 0.0;
 }
 
 .bespoke-bullet {
   text-align: left;
+  transition: opacity 200ms;
 }
