slides are a bad idea right now.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,7 +14,9 @@
 @import "neat/neat";
 
 /* CSS RESET */
-@import "reset.css";
+// @import "reset.css";
+
+/* SLIDE */
 
 /* COLOR PALLETTE */
 /* https://kuler.adobe.com/Imagine-color-theme-3389921/ */
