--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -130,9 +130,9 @@ ul.big li {
   font-size: 1.6rem; 
 }
 
-li li {
+li ul {
   font-size: 0.9em;
-  padding-left : 1.0rem;
+  padding-left : 2.0rem;
 }
 
 /* SPECIAL CLASSES */
